@@ -160,6 +160,16 @@ SUBROUTINE VDIF_TS(NCON1,F)
         END DO
 #    endif
 
+     IF(HEATING_TYPE == 'flux')THEN
+        !     DO I=1,M
+        !       WFSURF(I)=WTSURF(I)
+        !       SWRADF(I)=SWRAD(I)
+        !       SASURF(I)=0.0_SP
+        !     END DO
+        WFSURF(1:M)=WFSURF(1:M)
+        SWRADF(1:M)=SWRAD(1:M)
+        SASURF=0.0_SP
+
         DO K = 1, KB
            DO I = 1, M
 #    if !defined (WET_DRY)
@@ -167,66 +177,35 @@ SUBROUTINE VDIF_TS(NCON1,F)
 #    else
               IF(ISWETN(I) == 1)THEN
 #    endif
-
-! Jadon: avoid overcooling or overheating in the region (depth<2m)
-! For ROSA domain clipped to 10m
-                 IF(D(I)<10.0_SP)THEN
-                    WFSURF(I) = 0.0_SP
-                    SWRADF(I) = 0.0_SP
-                 END IF
-! Jadon: avoid overcooling or overheating in the region (depth<2m)
-
                  ZDEP = Z(I,K)*D(I)
-
-!       SPECIFIED PARAMETERS FOR ROSA/UK WATERS CASE (DECEMBER 2016)
-                    IF(D(I) < 50.0_SP) THEN
-                       RHEAT=0.65
-                       ZETA1=1._SP
-                       ZETA2=15.0_SP
-                    ELSE IF(D(I) > 100.0_SP) THEN
-                       RHEAT=0.58_SP
-                       ZETA1=0.35_SP
-                       ZETA2=23.0_SP
-                    ELSE
-                       TMP1=(D(I)-50.0_SP)/(100.0_SP-50.0_SP)
-                       RHEAT=0.65_SP+(0.58_SP-0.65_SP)*TMP1
-                       ZETA1=1._SP+ (0.35_SP-1._SP )*TMP1
-                       ZETA2=15.0_SP+ (23.0_SP-15.0_SP )*TMP1
-                    END IF
-
-! zlai: include the gom method to consider different surface heat penetration
-!                 IF(D(I) < 100.0_SP) THEN
-!                    RHEAT=0.78_SP
-!                    ZETA1=1.4_SP
-!                    ZETA2=6.3_SP
-!                 ELSE IF(D(I) > 150.0_SP) THEN
-!                    RHEAT=0.58_SP
-!                    ZETA1=0.35_SP
-!                    ZETA2=23.0_SP
-!                 ELSE
-!                    TMP1=(D(I)-100.0_SP)/(150.0_SP-100.0_SP)
-!                    RHEAT=0.78_SP+(0.58_SP-0.78_SP)*TMP1
-!                    ZETA1=1.4_SP+ (0.35_SP-1.4_SP )*TMP1
-!                    ZETA2=6.3_SP+ (23.0_SP-6.3_SP )*TMP1
-!                 END IF
-! zlai: include the gom method to consider different surface heat penetration
-
                  RAD(I,K)=SWRADF(I)*(RHEAT*EXP(ZDEP/ZETA1)+(1-RHEAT)*EXP(ZDEP/ZETA2))
+!CHEN                 RAD(I,K)=SWRADF(I)*(RHEAT/ZETA1*EXP(ZDEP/ZETA1)+(1-RHEAT)/ZETA2*EXP(ZDEP/ZETA2))
 #    if defined (WET_DRY)
               END IF
 # endif
            END DO
         END DO
+     ELSE IF(HEATING_TYPE == 'body')THEN
+        WFSURF(1:M)=WFSURF(1:M)
+        SWRADF = 0.0_SP
+        SASURF = 0.0_SP
+	RAD    = 0.0_SP
+     ELSE IF(HEATING_TYPE == 'surface')THEN
+        WFSURF(1:M)=WFSURF(1:M)
+        SWRADF = 0.0_SP
+        SASURF = 0.0_SP
+	RAD    = 0.0_SP
+     END IF
 
   CASE(2)
 
      SWRADF   = 0.0_SP
-     WFSURF   =0.0_SP
-     COSGAMA1 =1.0_SP
+     WFSURF   = 0.0_SP
+     COSGAMA1 = 1.0_SP
 !---Considering the salinity conservation, the sea surface salinity flux-----!
 !---can be set as zero, that is----------------------------------------------!
      SASURF   = 0.0_SP
-     RAD      =0.0_SP
+     RAD      = 0.0_SP
 
   CASE DEFAULT
      CALL FATAL_ERROR('NCON NOT CORRECT IN VDIF_TS')
@@ -340,8 +319,9 @@ SUBROUTINE VDIF_TS(NCON1,F)
 !!$           END IF
 
 
-           FF(I,KBM1) = (CF(I,KBM1)*VHPF(I,KBM2)-FF(I,KBM1)-GW+DTI*(RAD(I,KBM1)-RAD(I,KB)-TMP)/(D(I)*DZ(I,KBM1))) &
-                /(CF(I,KBM1)*(1._SP-VHF(I,KBM2))-1._SP)
+           FF(I,KBM1) = (CF(I,KBM1)*VHPF(I,KBM2)-FF(I,KBM1)-GW    &
+	            +DTI*(WTHEAT(I)+RAD(I,KBM1)-RAD(I,KB)-TMP)/(D(I)*DZ(I,KBM1))) &
+                    /(CF(I,KBM1)*(1._SP-VHF(I,KBM2))-1._SP)
 
 
 #  if defined (WET_DRY)
